--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         >
         <div class="w-20 h-1 mt-5 mr-2 bg-white"></div>
         <div>
-          <h1 class="text-lg lg:text-2xl xl:text-4xl font-extrabold">
+          <h1 class="text-lg lg:text-2xl xl:text-4xl font-black">
             TRANSPORT, LOGISTIQUE, TRANSIT ENTRE L'EUROP ET L'AFRIQUE
           </h1>
           <p class="opacity-70 ">
@@ -101,8 +101,15 @@
       >
         Demander un devis
       </button>
-      </div>
-    </section>
+    </div>
+    <div class="flex my-20 w-full justify-center">
+      <button
+      class="self-center bg-white border text-secendary border-secendary py-3 xl:py-4 px-10 xl:px-12 rounded-lg hover:bg-secendary hover:text-white"
+      >
+      decouvrir nos solutions
+    </button>
+  </div>
+  </section>
     </div>
   </body>
 </html>
