--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <header class="container mx-auto">
       <nav class="h-32 md:h-40 lg:h-48 xl:h-[200px] flex flex-row justify-between items-center">
-        <a href="#"><img class="h-24" src="../assets/logo.png" alt="logo" /></a>
+        <a href="#"><img class="h-24" src="./assets/logo.png" alt="logo" /></a>
         <ul class="hidden lg:inline-flex space-x-5 xl:space-x-14 font-medium text-[17px]">
           <li class="text-primary flex flex-col items-center">
             <a href="#"> A propos</a>
@@ -43,8 +43,8 @@
         </ul>
         <div class="space-x-8 hidden lg:inline-flex ">
           <div class="h-7 inline-flex space-x-2">
-            <img " src=" ../assets/france.svg" alt="france">
-            <img src="../assets/spain.svg" alt="spain" />
+            <img " src=" ./assets/france.svg" alt="france">
+            <img src="./assets/spain.svg" alt="spain" />
           </div>
           <div class="inline-flex items-center space-x-2 h-7 text-secendary">
             <a href="#">
@@ -69,7 +69,7 @@
         <!-- hero image -->
         <img
           class="sm:rounded-2xl max-h-72 sm:max-h-[678px] w-full"
-          src="../assets/cargo-shipment.jpg"
+          src="./assets/cargo-shipment.jpg"
           alt="cargo port image"
         />
         <!-- dots without functionality -->
