--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         Demander un devis
       </button>
     </div>
-    <div class="flex my-8 sm:my-20 w-full justify-center">
+    <div class="flex mt-5 sm:my-20 w-full justify-center">
       <button
       class="self-center bg-white border text-secendary border-secendary py-3 xl:py-4 px-10 xl:px-12 rounded-lg hover:bg-secendary hover:text-white"
       >
